--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ video{
 }
 
 .head{
-    background-image:url(./3bata/bg1\ blur.jpg) ;
+     background-image: url('https://raw.githubusercontent.com/seiff712/seiff712/main/3bata/bg1%20blur.jpg');
     background-size: cover;
     background-position: center center;
     
@@ -311,7 +311,7 @@ video{
 
 .seiff:hover{
 
-    background-image: url(./3bata/3bata1.jpg);
+    background-image: url(https://raw.githubusercontent.com/seiff712/seiff712/main/3bata/3bata1.jpg);
     background-size: cover;
     background-position: center center;
     transition-duration: 2s;
@@ -406,7 +406,7 @@ input, textarea {
 
 
 .blockk{
-    background-image: url(../3bata/bg1\ blur.jpg);
+    background-image: url(https://raw.githubusercontent.com/seiff712/seiff712/main/3bata/bg1%20blur.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
@@ -422,7 +422,7 @@ input, textarea {
     color: rgb(255, 255, 255);
 }
 .background9{
-    background-image: url(./3bata/10.jpg);
+    background-image: url(https://raw.githubusercontent.com/seiff712/seiff712/main/3bata/10.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
@@ -436,7 +436,7 @@ input, textarea {
 }
 
 .block{
-    background-image: url(./3bata/bg2.jpg);
+    background-image: url(https://raw.githubusercontent.com/seiff712/seiff712/main/3bata/bg2.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
