--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ video{
 }
 
 .head{
-     background-image: url('https://raw.githubusercontent.com/seiff712/seiff712/main/3bata/bg1%20blur.jpg');
+     background-image: url('https://github.com/seiff712/seiff712/blob/564053deef4c8bf4f5e29c96035b1cdbe6648362/bg1%20blur.jpg');
     background-size: cover;
     background-position: center center;
     
